<?xml version="1.0" encoding="utf-8"?><menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/drawer_group_main"
        android:checkableBehavior="single">
        <item
            android:id="@+id/drawer_item_home"
            android:icon="@drawable/ic_home"
            android:orderInCategory="100"
            android:title="@string/drawer_item_home"/>
        <item
            android:id="@+id/drawer_item_profile"
            android:icon="@drawable/ic_profile"
            android:orderInCategory="110"
            android:title="@string/drawer_item_profile"/>
    </group>
    <item
        android:id="@+id/drawer_item_other"
        android:orderInCategory="300"
        android:title="@string/drawer_item_other">
        <menu>
            <group
                android:id="@+id/drawer_group_other"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/drawer_item_settings"
                    android:icon="@drawable/ic_settings"
                    android:title="@string/drawer_item_settings"/>
            </group>
        </menu>
    </item>
</menu>