<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:minHeight="428dp"
              android:minWidth="296dp"
              android:orientation="vertical">

    <!--android:background="@color/color_primary_light"-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_primary_light"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="horizontal"
        android:weightSum="1">


        <org.hisp.dhis.android.dataentry.commons.ui.FontTextView
            android:id="@+id/selection_dialog_title"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:lines="1"
            android:padding="@dimen/keyline_default"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_large"
            app:font="@string/font_name_condensed"/>


        <ImageButton
            android:id="@+id/selection_dialog_cancel"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:contentDescription="@string/cancel_description"
            android:padding="8dp"
            android:src="@drawable/ic_cancel_white"/>
    </LinearLayout>

    <android.support.v7.widget.SearchView
        android:id="@+id/selection_dialog_searchview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:defaultQueryHint="@string/selection_hint"
        app:iconifiedByDefault="false"
        />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/selection_dialog_recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>